--- a/src/storefront/Makefile
+++ b/src/storefront/Makefile
@@ -1,3 +1,10 @@
+#!make
+
+#
+# Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+# The Universal Permissive License (UPL), Version 1.0
+#
+
 IMAGE=mushop-dev-storefront
 
 API=http://api:3000
