--- a/src/api/Makefile
+++ b/src/api/Makefile
@@ -1,4 +1,10 @@
 #!make
+
+#
+# Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+# The Universal Permissive License (UPL), Version 1.0
+#
+
 IMAGE=mushop-dev-api
 CONTAINER=api
 
