--- a/src/api/test/Dockerfile
+++ b/src/api/test/Dockerfile
@@ -1,10 +1,13 @@
+#
+# Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+# The Universal Permissive License (UPL), Version 1.0
+#
+
 FROM node:10-alpine
 
 RUN apk update && apk add make
 
 RUN npm install -g supper
-# RUN npm install -g phantomjs-prebuilt --unsafe-perm
-# RUN npm install -g casperjs
 
 RUN mkdir -p /usr/src/app
 
