--- a/src/storefront/Dockerfile
+++ b/src/storefront/Dockerfile
@@ -1,3 +1,8 @@
+#
+# Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+# The Universal Permissive License (UPL), Version 1.0
+#
+
 ###############################
 #    Build stage (node/npm)   #
 ###############################
