added header to compose

--- a/src/api/test/docker-compose.yml
+++ b/src/api/test/docker-compose.yml
@@ -1,3 +1,8 @@
+#
+# Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+# The Universal Permissive License (UPL), Version 1.0
+#
+
 version: '3'
 
 services:
@@ -40,25 +45,30 @@ services:
       - JAVA_OPTS=-Xms128m -Xmx256m -XX:+UseG1GC -Dlogging.level.mushop.orders=TRACE -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
 
   shipping:
-    image: weaveworksdemos/shipping
-    hostname: shipping
+    image: phx.ocir.io/intvravipati/mushop/shipping:1.0.0
+    hostname: payment
     restart: always
     environment:
       - reschedule:on-node-failure
-  queue-master:
-    image: weaveworksdemos/queue-master
-    hostname: queue-master
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - OCI_TENANT_ID
+      - OCI_COMPARTMENT_ID
+      - OCI_USER_ID
+      - OCI_REGION
+      - OCI_FINGERPRINT
+      - OCI_API_KEY
+
+  stream:
+    image: phx.ocir.io/intvravipati/mushop/stream:1.0.0
+    hostname: payment
     restart: always
     environment:
       - reschedule:on-node-failure
-  rabbitmq:
-    image: rabbitmq:3
-    hostname: rabbitmq
-    restart: always
-    environment:
-      - reschedule:on-node-failure
+      - OCI_TENANT_ID
+      - OCI_COMPARTMENT_ID
+      - OCI_USER_ID
+      - OCI_REGION
+      - OCI_FINGERPRINT
+      - OCI_API_KEY
 
   payment:
     image: phx.ocir.io/intvravipati/mushop/payment:0.0.1
