--- a/src/storefront/Makefile
+++ b/src/storefront/Makefile
@@ -39,7 +39,7 @@ start:
 # Removes the development container
 clean:
 	@if [ $$(docker ps -a -q -f name=$(IMAGE) | wc -l) -ge 1 ]; then docker rm -f $(IMAGE); fi
-	# @if [ $$(docker images -q $(IMAGE) | wc -l) -ge 1 ]; then docker rmi $(IMAGE); fi
+	@if [ $$(docker images -q $(IMAGE) | wc -l) -ge 1 ]; then docker rmi $(IMAGE); fi
 
 chaos:
 	@docker stop ${PROJECT}_carts_1
@@ -47,23 +47,6 @@ chaos:
 # Builds the Docker image used for running tests
 test-image:
 	@docker build -t $(IMAGE) -f test/Dockerfile .
-
-# Runs unit tests in Docker
-# test: test-image
-# 	@docker run              \
-# 		--rm                   \
-# 		-it                    \
-# 		-v $$PWD:/usr/src/app  \
-# 		$(IMAGE) /usr/local/bin/npm test
-
-# Runs integration tests in Docker
-# e2e: test-image
-# 	@docker run              \
-# 		--rm                   \
-# 		-it                    \
-# 		--network mutest_default \
-# 		-v $$PWD:/usr/src/app  \
-# 		$(IMAGE) /usr/src/app/test/e2e/runner.sh
 
 kill-services:
 	@docker-compose -p $(PROJECT) -f test/docker-compose.yml down
