--- a/deploy/basic/terraform/marketplace-schema.yaml
+++ b/deploy/basic/terraform/marketplace-schema.yaml
@@ -73,4 +73,10 @@ outputs:
     displayText: "Made with \u2764 by Oracle A-Team"
     visible: true
   
+  comments:
+    type: string
+    title: "Comments"
+    displayText: "The application URL will be unavailable for a few minutes after provisioning, while the application bootstraps"
+    visible: true
+  
 primaryOutputButton: ${lb_public_url}
