--- a/src/user/docker-compose.yml
+++ b/src/user/docker-compose.yml
@@ -12,13 +12,17 @@ services:
       - all
     cap_add:
       - NET_BIND_SERVICE
-    read_only: true
+    read_only: false
     volumes:
       - ./Wallet_Creds:/usr/lib/oracle/19.3/client64/lib/network/admin/:ro
+      - ./src:/usr/src/app/src
+      - ./package.json:/usr/src/app/package.json
     environment:
       - reschedule=on-node-failure
+      - NODE_ENV=development
       - OADB_USER
       - OADB_PW
       - OADB_SERVICE
     ports:
       - '3000:3000'
+    command: ['npm', 'run', 'start:dev']
