--- a/src/user/package.json
+++ b/src/user/package.json
@@ -6,10 +6,14 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
+    "build:schema": "npm run typeorm -- query \"$(./schema/atp.users.sh)\"",
+    "build:orm": "rimraf dist && npm run typeorm -- schema:sync",
+    "build:orm:dryrun": "rimraf dist && npm run typeorm -- schema:log",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
-    "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/main.js\"",
+    "start:dev": "nodemon -r tsconfig-paths/register -i node_modules src/main.ts",
+    "start:debug": "nodemon --inspect -r tsconfig-paths/register -i node_modules src/main.ts",
     "start:prod": "node dist/main.js",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
@@ -19,11 +23,21 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@godaddy/terminus": "^4.2.0",
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/terminus": "^6.5.1",
     "@nestjs/typeorm": "^6.1.3",
-    "reflect-metadata": "^0.1.12",
+    "@nestjsx/crud": "^4.2.0",
+    "@nestjsx/crud-typeorm": "^4.2.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.10.0",
+    "oracledb": "^4.0.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.13",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
     "typeorm": "^0.2.18"
@@ -33,16 +47,18 @@
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "2.0.7",
     "jest": "24.7.1",
+    "nodemon": "^1.19.2",
     "prettier": "1.17.0",
     "supertest": "4.0.2",
     "ts-jest": "24.0.2",
-    "ts-node": "8.1.0",
-    "tsc-watch": "2.2.1",
+    "ts-node": "^8.4.1",
+    "tsc-watch": "^4.0.0",
     "tsconfig-paths": "3.8.0",
-    "tslint": "5.16.0",
-    "typescript": "3.4.3"
+    "tslint": "^5.20.0",
+    "typescript": "^3.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
