--- a/src/user/docker-compose.yml
+++ b/src/user/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+      args:
+        nodeEnv: development
     image: mushop/user
     hostname: user
     restart: always
@@ -16,10 +18,10 @@ services:
     volumes:
       - ./Wallet_Creds:/usr/lib/oracle/19.3/client64/lib/network/admin/:ro
       - ./src:/usr/src/app/src
+      - ./ormconfig.js:/usr/src/app/ormconfig.js
       - ./package.json:/usr/src/app/package.json
     environment:
       - reschedule=on-node-failure
-      - NODE_ENV=development
       - OADB_USER
       - OADB_PW
       - OADB_SERVICE
