--- a/src/user/package.json
+++ b/src/user/package.json
@@ -1,21 +1,25 @@
 {
   "name": "mushop-user-service",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "MuShop Node.js Users Service",
+  "author": "Oracle",
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
-    "build:schema": "npm run typeorm -- query \"$(./schema/atp.users.sh)\"",
-    "build:orm": "rimraf dist && npm run typeorm -- schema:sync",
-    "build:orm:dryrun": "rimraf dist && npm run typeorm -- schema:log",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "format": "prettier --write \"src/**/*.ts\"",
+    "schema:user": "npm run typeorm -- query \"$(./schema/atp.init.sh)\"",
+    "schema:sync": "npm run typeorm -- schema:sync",
+    "schema:syncdev": "npm run typeorm:ts -- schema:sync",
+    "schema:sync:dryrun": "npm run typeorm -- schema:log",
+    "schema:syncdev:dryrun": "npm run typeorm:ts -- schema:log",
+    "typeorm": "typeorm",
+    "typeorm:ts": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "typeorm:debug": "node -p \"require('./ormconfig')\"",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "nodemon -r tsconfig-paths/register -i node_modules src/main.ts",
-    "start:debug": "nodemon --inspect -r tsconfig-paths/register -i node_modules src/main.ts",
+    "start:dev": "nodemon -i node_modules -r tsconfig-paths/register src/main.ts",
+    "start:sync": "npm run schema:syncdev && nodemon -i node_modules -r tsconfig-paths/register src/main.ts",
     "start:prod": "node dist/main.js",
     "lint": "tslint -p tsconfig.json -c tslint.json",
+    "format": "prettier --write \"src/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -24,10 +28,10 @@
   },
   "dependencies": {
     "@godaddy/terminus": "^4.2.0",
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
+    "@nestjs/common": "^6.7.1",
+    "@nestjs/core": "^6.7.1",
     "@nestjs/passport": "^6.1.0",
-    "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/platform-express": "^6.7.1",
     "@nestjs/terminus": "^6.5.1",
     "@nestjs/typeorm": "^6.1.3",
     "@nestjsx/crud": "^4.2.0",
@@ -39,11 +43,11 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3",
-    "typeorm": "^0.2.18"
+    "rxjs": "^6.5.2",
+    "typeorm": "^0.2.19"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.0.0",
+    "@nestjs/testing": "^6.7.1",
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
