--- a/src/user/kubernetes/init-job.yaml
+++ b/src/user/kubernetes/init-job.yaml
@@ -11,28 +11,28 @@ spec:
       containers:
       - name: user-init
         imagePullPolicy: Never
-        image: mushop/user
+        image: mushop/user:latest
         command: ["npm", "run", "schema:init"]
         env:
         - name: OADB_ADMIN_PW
           valueFrom:
             secretKeyRef:
-              name: oadb-admin
+              name: user-oadb-admin
               key: oadb_admin_pw
         - name: OADB_USER
           valueFrom:
             secretKeyRef:
-              name: oadb-connection
+              name: user-oadb-connection
               key: oadb_user
         - name: OADB_PW
           valueFrom:
             secretKeyRef:
-              name: oadb-connection
+              name: user-oadb-connection
               key: oadb_pw
         - name: OADB_SERVICE
           valueFrom:
             secretKeyRef:
-              name: oadb-connection
+              name: user-oadb-connection
               key: oadb_service
         volumeMounts:
         - name: wallet
@@ -40,5 +40,5 @@ spec:
       volumes:
       - name: wallet
         secret:
-          secretName: oadb-wallet
+          secretName: user-oadb-wallet
           defaultMode: 256
