--- a/deploy/kubernetes/manifests/catalogue-dep.yaml
+++ b/deploy/kubernetes/manifests/catalogue-dep.yaml
@@ -27,7 +27,7 @@ spec:
           - containerPort: 80
           env:
           - name: ZIPKIN
-            value: zipkin.jaeger.svc.cluster.local
+            value:
           - name: OADB_USER
             valueFrom:
               secretKeyRef:
