--- a/deploy/helm-chart/mushop/values-test.yaml
+++ b/deploy/helm-chart/mushop/values-test.yaml
@@ -2,6 +2,9 @@ global:
   mock:
     service: "false"
 
+hpa:
+  enabled: true
+
 ingress:
   enabled: true
 
@@ -52,9 +55,6 @@ stream:
   enabled: true
 
 user:
-  enabled: true
-
-user-db:
   enabled: true
 
 secrets:
