--- a/deploy/helm-chart/mushop/charts/user/templates/user-deployment.yaml
+++ b/deploy/helm-chart/mushop/charts/user/templates/user-deployment.yaml
@@ -2,8 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "user.fullname" . }}
-  labels:
-{{ include "user.labels" . | indent 4 }}
+  labels: {{ include "user.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -18,29 +17,51 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 3000
           env:
-            - name: MONGO_HOST
-              value: {{ .Release.Name }}-user-db:27017 # TODO: get the port and name using a template
+            - name: OADB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "user.fullname" . }}-connection
+                  key: oadb_user
+            - name: OADB_PW
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "user.fullname" . }}-connection
+                  key: oadb_pw
+            - name: OADB_SERVICE
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "user.fullname" . }}-connection
+                  key: oadb_service
           livenessProbe:
             httpGet:
               path: /health
               port: http
             initialDelaySeconds: 300
-            periodSeconds: 3
+            periodSeconds: 30
           readinessProbe:
             httpGet:
               path: /health
               port: http
-            initialDelaySeconds: 180
-            periodSeconds: 3
+            initialDelaySeconds: 10
+            periodSeconds: 5
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
+          volumeMounts:
+            - name: wallet
+              mountPath: /usr/lib/oracle/19.3/client64/lib/network/admin
+              readOnly: true
+      volumes:
+        - name: wallet
+          secret:
+            secretName: {{ include "user.fullname" . }}-wallet
+            defaultMode: 256
       nodeSelector:
         beta.kubernetes.io/os: linux
