--- a/deploy/helm-chart/mushop/charts/user/templates/user-hpa.yaml
+++ b/deploy/helm-chart/mushop/charts/user/templates/user-hpa.yaml
@@ -2,12 +2,13 @@
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "storefront.fullname" . }}
+  name: {{ include "user.fullname" . }}
+  labels: {{ include "user.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "storefront.fullname" . }}
+    name: {{ include "user.fullname" . }}
   minReplicas: {{ .Values.hpa.minReplicas }}
   maxReplicas: {{ .Values.hpa.maxReplicas }}
   metrics:
