--- a/deploy/helm-chart/mushop/charts/user/templates/user-svc.yaml
+++ b/deploy/helm-chart/mushop/charts/user/templates/user-svc.yaml
@@ -2,12 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "user.fullname" . }}
-  labels:
-{{ include "user.labels" . | indent 4 }}
+  labels: {{ include "user.labels" . | nindent 4 }}
 spec:
   selector:
     app.kubernetes.io/name: {{ include "user.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: 80
+      targetPort: 3000
