--- a/deploy/helm-chart/mushop/charts/payment/templates/payment-svc.yaml
+++ b/deploy/helm-chart/mushop/charts/payment/templates/payment-svc.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "payment.fullname" . }}
-  labels:
-{{ include "payment.labels" . | indent 4 }}
+  # TODO: update to payment.fullname when orders can receive variable
+  name: {{ include "payment.name" . }}
+  labels: {{ include "payment.labels" . | nindent 4 }}
 spec:
   selector:
     app.kubernetes.io/name: {{ include "payment.name" . }}
