--- a/deploy/helm-chart/mushop/charts/shipping/templates/shipping-svc.yaml
+++ b/deploy/helm-chart/mushop/charts/shipping/templates/shipping-svc.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "shipping.fullname" . }}
-  labels:
-{{ include "shipping.labels" . | indent 4 }}
+# TODO: update to shipping.fullname when orders can receive variable
+  name: {{ include "shipping.name" . }}
+  labels: {{ include "shipping.labels" . | nindent 4 }}
 spec:
   type: NodePort
   selector:
